--- a/index.html
+++ b/index.html
@@ -2,7 +2,14 @@
 <html>
 
 <body>
-    <div id="app"></div>
+    <div id="app">
+      <p>
+      <router-link to="/user/foo">/user/foo</router-link>
+      <router-link to="/user/foo/profile">/user/foo/profile</router-link>
+      <router-link to="/user/foo/posts">/user/foo/posts</router-link>
+    </p>
+    <router-view></router-view>
+    </div>
 </body>
 
 <script src="./dist/build.js"></script>
